# sfos-templates

./: README.md  sdk-init
qtquick2app-rust/: CMakeLists.txt  Cargo.toml  README  template.desktop  template.pro  wizard.json
qtquick2app-rust/qml/pages/: FirstPage.qml  SecondPage.qml
qtquick2app-rust/rpm/: macros.rust  macros.share  rust_build.inc  rust_env.inc  template-cmake.spec  template-qmake.spec  template.changes.in  template.changes.run.in  template.spec
qtquick2app-rust/src/: main.rs  template.cpp
