cargo-features = [ "strip" ]

[package]
name = "%{ProjectName}"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
qmeta-async = { git = "https://gitlab.com/rubdos/qmeta-async.git" }
qmetaobject = { version = "0.2" }
sailors = { git = "https://gitlab.com/whisperfish/sailo-rs.git" }

[profile.release.%{ProjectName}]
debug = false
strip = "symbols"
